# pixel-assist

./: .gitignore  README.md  docker-compose.yml  setup.html  setup.js  tutorial.html
anythingllm/: docker-compose.yml
anythingllm/instance1/: docker-compose.yml
caddy/: Caddyfile  docker-compose.yml
middleware/: caddyfile-llm1-block.txt  docker-compose.yml
middleware/pii-proxy/: Dockerfile  README.md  pyproject.toml
middleware/pii-proxy/app/: config.py  main.py  proxy.py  scrubber.py  session_store.py
