[project]
name = "pii-proxy"
version = "0.2.0"
description = "PII-scrubbing proxy — Presidio + Australian recognizers"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7.0,<3.9.0",
]
